project/styles/siteplan.css
/* ... */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  max-width: 700px;
  margin: var(--primary-margin) auto;
  /* background-color: var(--primary-color); */
}

h1 {
  text-align: center;
  color: var(--text-primary-color);
  background-color: none;
  background-color: rgba(0, 0, 0, 0);
  font-size: 3rem;
}

h2 {
  /* margin: var(--secondary-margin) 0; */
}

section {
  background-color: var(--secondary-color);
  color: var(--text-secondary-color);
  padding: var(--primary-padding);
}

ul li {
  list-style-type: none;
}

p {
  margin-bottom: 1rem;
}

html {
  height: 100%;
  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
  overflow: hidden;
}
/* ... */

